Added Node and External Objects and Change Existing Node / External Address Registration and Lookup Flow (#12)
* chore: remove external_ip field in responses

* feat: add Node and External object

* chore: remove bootstrap in main

* chore: applied suggestion
