# sandboxd-let/http/server.go
@@ -8,13 +8,12 @@ import (
 )
 
 type Server struct {
-	svc   *sandbox.Service
-	ipSvc externalIPService
-	log   *logging.Logger
+	svc *sandbox.Service
+	log *logging.Logger
 }
 
 func New(svc *sandbox.Service, logger *logging.Logger) *Server {
-	return &Server{svc: svc, ipSvc: commandExternalIPService{}, log: logger}
+	return &Server{svc: svc, log: logger}
 }
 
 func (s *Server) Handler() http.Handler {
